# Assimp-GL-Wrapper

./: CMakeLists.txt  Readme.md
assimp_inspector/: assimp_inspector.cpp
assimp_wrapper/: anim_test.cpp  anim_test.cpp~  glstuff.cpp  glstuff.h  png_loader.cpp  png_loader.h  scene.cpp  scene.h
include/: fixedpoint.h  linealg.h  matrix3.h  matrix4.h  vector2.h  vector3.h  vector4.h
