cmake_minimum_required(VERSION 2.4)
include(FindPkgConfig)

SET( TEST_ANIMATION_SOURCES
	assimp_wrapper/anim_test.cpp
	assimp_wrapper/scene.cpp
	assimp_wrapper/png_loader.cpp
	assimp_wrapper/glstuff.cpp
)

SET( ASSIMP_INSPECTOR_SOURCES
    assimp_inspector/assimp_inspector.cpp
)

SET( CMAKE_CXX_FLAGS "-std=c++11")

PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)
PKG_SEARCH_MODULE(ASSIMP REQUIRED assimp)
PKG_SEARCH_MODULE(PNG REQUIRED libpng)

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ASSIMP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIRS})

LINK_DIRECTORIES(${GLFW_LIBRARY_DIRS})
LINK_DIRECTORIES(${ASSIMP_LIBRARY_DIRS})
LINK_DIRECTORIES(${PNG_LIBRARY_DIRS})

ADD_EXECUTABLE("TEST_ANIM_LOAD" ${TEST_ANIMATION_SOURCES})
ADD_EXECUTABLE("assimp_inspector" ${ASSIMP_INSPECTOR_SOURCES})
TARGET_LINK_LIBRARIES("TEST_ANIM_LOAD" ${GLFW_LIBRARIES} ${ASSIMP_LIBRARIES} ${PNG_LIBRARIES}  "GLEW" "GL")
TARGET_LINK_LIBRARIES("assimp_inspector" ${ASSIMP_LIBRARIES} )
